# Zephyr

./: .gitignore  404.html  LICENSE  PiApproximater.py  README.de.md  README.md  TODO.md  ZephyrDocs.zim  ZephyrRun.py  code.lys  code.zl  code.zph  code.zsrc  createBuild.py  documentation.md  documentationOLD.md  file.txt  functions.py  index.html  main.py  mkdocs.yml  pyproject.toml  regex.py  requirements.txt  sitemap.xml  zephyr.py
BACK/: functions.py  main.py
BeginnerInfo/: index.html
Errors/: 102.zsrc  110.zsrc  201.zsrc  202.zph  202.zsrc  203.zph  204.zsrc  205.zph  205.zsrc  index.html
Examples/: Error.zph  Functions.lys  MathObject.lys  MathObject.zph  MathObject.zsrc  buildInFunctions.zph  buildInFunctions.zsrc  conditionalObject.json  conditionalObject.zph  conditionalObject.zsrc  function.json  function.lys  function.zph  function.zsrc  ifElseStatement.zph  ifElseStatement.zsrc  ifStatement.zph  ifStatement.zsrc  libraries.json  libraries.lys  libraries.zph  libraries.zsrc  list.zph  list.zsrc  loop.lys  loop.zph  loop.zsrc  mathObject.json  predefVars1.zph  predefVars2.zph  predefVars2.zsrc  rng.zph  rng.zsrc  varDump.lys  variables.lys  variables.zph  variables.zsrc
Overview/: index.html
Projects/: birthday.py  piApproximator.json  piApproximator.lys
Types/: oldReadme.md.bac
docs/: .pages  BeginnerInfo.md  Errors.md  Overview.md  ZephyrDocss.zim  index.md  overview.md
docss/: Errors.md  Overview.md
lib/: GPIO.py  dumpMe.json  maths.py  moreMath.py  myVars.zpkg  piApproximatorVars.json  piApproximatorVars.zpkg  predefVars.json  test.zpkg  (+1 more)
(+245 files in other folders)
