[project]
name = "zephyr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fake-rpi",
]

[tool.uv.sources]
fake-rpi = { git = "https://github.com/sn4k3/FakeRPi" }

[dependency-groups]
developer = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
