[project]
name = "zephyr"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.5",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.1",
]
build = [
    "nuitka==4.1.1",
    "patchelf==0.17.0"
]
